# oidc-rp

./: Cargo.toml  Readme.md
examples/dummy/: Cargo.toml
examples/dummy/src/: main.rs
src/: dummy.rs
